--- a/views/doeAgora.handlebars
+++ b/views/doeAgora.handlebars
@@ -1,61 +1,36 @@
 <br>
 <br>
-<div class="card-group container mx-auto  ">
-  <div class="card repolho">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Ong 1</h5>
-      <p class="card-text">Breve descrição sobre a Ong</p>
+<div class=" container">
+  <div class="card-deck">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ong 1</h5>
+        <p class="card-text"> Breve descrição sobre a Ong</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+      </div>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ong 2</h5>
+        <p class="card-text">Breve descrição sobre a Ong</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+      </div>
     </div>
-  </div>
-  <div class="card repolho">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Ong 2</h5>
-      <p class="card-text">Breve descrição sobre a Ong</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
-    </div>
-  </div>
-  <div class="card repolho">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Ong 3</h5>
-      <p class="card-text">Breve descrição sobre a Ong</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
-    </div>
-  </div>
-</div>
-
-<!--<div class="card-deck container mx-auto  " >
-  <div class="card">
-    <img src="https://lh3.googleusercontent.com/proxy/6XLijJ2eZqzw75SVzcjGHwC6MDcwunGOWqsk8Mz38ZV_eJgRocXQpwdQbpDUhDooRSufJZ9j_pCyf_fMP_LoMpURNAZU1DDVe-d3P184m91ZDw-mjxo6pZ6W7etu3iggKf_n5Sz8XoKyj4UHecDunOvyI3_dKFEvXJj6gZTzOt9Nb6M" height="300" width="300" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Ong 1</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card">
-   <a href="https://www.senacrs.com.br/unidades.asp?unidade=38"> <img src="https://assets.b9.com.br/wp-content/uploads/2012/08/023.jpg" height="300" width="300" class="card-img-top" alt="..."></a>
-    <div class="card-body">
-      <h5 class="card-title">Ong 2</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Ong 3</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ong 3</h5>
+        <p class="card-text">Breve descrição sobre a Ong</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted"><a href="#" class="btn btn-danger">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
+      </div>
     </div>
   </div>
 </div>
