--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,8 @@
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" 
     crossorigin="anonymous"></script>
    
-    <link rel="stylesheet" href="static/leonir.css">
+    <link rel="stylesheet" href="static/css/leonir.css">
+    <script src="static/js/script.js"></script>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,26 +23,20 @@
 </head>
 
 <body>
-    <br>
-    <br>
-    <br>
-    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Site para Doações</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="imagens/logo.png" alt=""></span>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="container" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="#about">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Doe agora</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Cadastre-se</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Login</a></li>
-                </ul>
-            </div>
-            
-        </nav>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav container">
+      <a class="nav-item nav-link active" href="/">Inicio <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="/doeAgora">Doe Agora</a>
+      <a class="nav-item nav-link active" href="/cadastro">Cadastre-se</a>
+      <a class="nav-item nav-link active" href="/login">Login</a>
+    </div>
+  </div>
+</nav>
     {{{body}}}
 </body>
 </html>
