Update uglifyjs, uuid, and 10 more files...

--- a/views/formulario.handlebars
+++ b/views/formulario.handlebars
@@ -23,7 +23,7 @@
         <tr>
             <td>{{nome}}</td>
             <td>{{senha}}</td>
-            <td><a href="#">Modificar</a></td>  
+            <td><a href="/update/{{id}}">Modificar</a></td>  
             <td><a href="/delete/{{id}}">Apagar</a></td>
         </tr>
     {{/each}}
