--- a/views/paginaInicial.handlebars
+++ b/views/paginaInicial.handlebars
@@ -1,47 +1,80 @@
 
-<div class="jumbotron jumbotron-fluid">
+<div style="background-color:#e9ecef;">
+  <div class="jumbotron jumbotron-fluid">
 
-  <div class="container">
-  
-    <h1 class="display-4">Doe, Ajude, Faça o bem!</h1>
-    <p class="lead">"O ato de doar-se significa ajudar o próximo, faze-lo feliz de alguma forma, por mais simples que seja sua ação. A cada ajuda,um mérito próprio."</p>
+    <div class="container">
+    
+      <h1 class="display-4">Doe, Ajude, Faça o bem!</h1>
+      <p class="lead">"O ato de doar-se significa ajudar o próximo, faze-lo feliz de alguma forma, por mais simples que seja sua ação. A cada ajuda,um mérito próprio."</p>
+    </div>
   </div>
-</div>
-
-<footer class="page-footer font-small unique-color-dark">
-  <div style="background-color:#e9ecef;">                             
-    <div class="container text-center text-md-left mt-5">
-      <div class="row mt-3">     
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">            
-          <h6 class="text-uppercase font-weight-bold">Objetivo da Ong</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-              <p>O objetivo do site é arecadar doações para Ongs da cidade de Erechim</p>
-        </div>   
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">              
-            <h6 class="text-uppercase font-weight-bold">Selecionar produto para Doação</h6>
-              <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                <p>
-                  <a href="#!">Alimentos</a>
-                </p>
-                <p>
-                  <a href="#!">Dinheiro</a>
-                </p>
-                <p>
-                  <a href="#!">Roupas</a>
-                </p>
-                <p>
-                  <a href="#!">Brinquedos</a>
-                </p>
+  <div style="background-color:#e9ecef;">
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ong 1</h5>
+            <p class="card-text">Descrição da Ong</p>
+            <p class="card-text"><small class="text-muted">Doação que a Ong precisa</small></p>
+          </div>
         </div>
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-            <h6 class="text-uppercase font-weight-bold">Contact</h6>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ong 2</h5>
+            <p class="card-text">Descrição da Ong</p>
+            <p class="card-text"><small class="text-muted">Doação que a Ong precisa</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ong 3</h5>
+            <p class="card-text">Descrição da Ong</p>
+            <p class="card-text"><small class="text-muted">Doação que a Ong precisa</small></p>
+            <br>
+            <br>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="page-footer font-small unique-color-dark">
+    <div style="background-color:#e9ecef;">                             
+      <div class="container text-center text-md-left mt-5">
+        <div class="row mt-3">     
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">            
+            <h6 class="text-uppercase font-weight-bold">Objetivo da Ong</h6>
               <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                <p>
-                  <i class="fas fa-home mr-3"></i> E-mail</p>
-                <p>
-                  <i class="fas fa-envelope mr-3"></i> Telefone para Contato</p>
-        </div>          
+                <p>O objetivo do site é arecadar doações para Ongs da cidade de Erechim</p>
+          </div>   
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">              
+              <h6 class="text-uppercase font-weight-bold">Selecionar produto para Doação</h6>
+                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                  <p>
+                    <a href="#!">Alimentos</a>
+                  </p>
+                  <p>
+                    <a href="#!">Dinheiro</a>
+                  </p>
+                  <p>
+                    <a href="#!">Roupas</a>
+                  </p>
+                  <p>
+                    <a href="#!">Brinquedos</a>
+                  </p>
+          </div>
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+              <h6 class="text-uppercase font-weight-bold">Contatos</h6>
+                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                  <p>
+                    <i class="fas fa-home mr-3"></i> E-mail</p>
+                  <p>
+                    <i class="fas fa-envelope mr-3"></i> Telefone para Contato</p>
+          </div>          
+        </div>  
       </div>  
-    </div>  
-  </div>    
-</footer>
+    </div>    
+  </footer>
+</div>
