--- a/views/atualiza.handlebars
+++ b/views/atualiza.handlebars
@@ -1,7 +1,7 @@
 <h1>Atualização de Usuário</h1>
 {{#each doador}}
     <form action="/updateUsuario" method="POST">
-        <!-- <input type="Text" name="codigo" <!--readonly="true" value={{id}}-->
+            <input type="text" name="codigo" readonly="true" value={{id}}>
             <input type="text" name="nome" value={{nome}}>
             <input type="text" name="senha" value={{senha}}>
             <input type="submit" name="conectar">
