--- a/views/cadastro.handlebars
+++ b/views/cadastro.handlebars
@@ -1,32 +1,44 @@
 <br>
 <br>
 <form class="container">
+  
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputPassword4">Usuário</label>
-      <input type="text" class="form-control" id="inputPassword4" placeholder="Nome de Usuário">
+      <input type="text" class="form-control" id="inputUsario" placeholder="Nome de Usuário">
     </div>
     <div class="form-group col-md-6">
       <label for="inputEmail4">E-mail</label>
       <input type="email" class="form-control" id="inputEmail4" placeholder="E-mail">
     </div>
+  </div>
+
+  <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputPassword4">Senha</label>
       <input type="password" class="form-control" id="inputPassword4" placeholder="Senha">
     </div>
+    <div class="form-group col-md-6">
+      <label for="inputPassword4">CPF / CNPJ</label>
+      <input type="text" class="form-control" id="inputCpf" placeholder="CPF / CNPJ">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="inputAddress">Endereço</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="Rua Paraná, nº 0">
+  
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputAddress">Endereço</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="Rua Paraná, nº 0">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="inputAddress2">Complemento</label>
+      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartamento, hotel, casa, etc.">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="inputAddress2">Complemento</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartamento, hotel, casa, etc.">
-  </div>
+
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputCity">Cidade</label>
-      <input type="text" class="form-control" id="inputCity">
+      <input type="text" class="form-control" id="inputCity" placeholder="Selecione uma Cidade">
     </div>
     <div class="form-group col-md-4">
       <label for="inputEstado">Estado</label>
@@ -66,6 +78,7 @@
       <input type="text"  class="form-control " pattern="\d{5}-?\d{3}" placeholder="Ex: 0000-000" id="inputCEP">
     </div>
   </div>
+
   <div class="form-group">
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="gridCheck">
