--- a/views/doeAgora.handlebars
+++ b/views/doeAgora.handlebars
@@ -34,3 +34,75 @@
     </div>
   </div>
 </div>
+<br>
+<br>
+<div class=" container">
+  <div class="card-deck">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ong 1</h5>
+        <p class="card-text"> Breve descrição sobre a Ong</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ong 2</h5>
+        <p class="card-text">Breve descrição sobre a Ong</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ong 3</h5>
+        <p class="card-text">Breve descrição sobre a Ong</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted"><a href="#" class="btn btn-danger">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<br>
+<div class=" container">
+  <div class="card-deck">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ong 1</h5>
+        <p class="card-text"> Breve descrição sobre a Ong</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ong 2</h5>
+        <p class="card-text">Breve descrição sobre a Ong</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ong 3</h5>
+        <p class="card-text">Breve descrição sobre a Ong</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted"><a href="#" class="btn btn-danger">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
+      </div>
+    </div>
+  </div>
+</div>
