--- a/views/cadastro.handlebars
+++ b/views/cadastro.handlebars
@@ -20,7 +20,7 @@
     </div>
     <div class="form-group col-md-6">
       <label for="inputPassword4">CPF / CNPJ</label>
-      <input type="text" class="form-control" id="inputCpf" placeholder="CPF / CNPJ">
+      <input type="text" class="form-control" id="inputCpf" placeholder=" Digite seu CPF / CNPJ">
     </div>
   </div>
   
@@ -76,6 +76,13 @@
     <div class="form-group col-md-2 ">
       <label for="inputCEP">CEP</label>
       <input type="text"  class="form-control " pattern="\d{5}-?\d{3}" placeholder="Ex: 0000-000" id="inputCEP">
+    </div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputCity">Telefone para Contato</label>
+      <input type="text" class="form-control" id="inputCity" placeholder="Digite um telefone para contato">
     </div>
   </div>
 
