--- a/views/doeAgora.handlebars
+++ b/views/doeAgora.handlebars
@@ -9,7 +9,7 @@
         <p class="card-text"> Breve descrição sobre a Ong</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+        <small class="text-muted"><a href='#' class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
     <div class="card">
@@ -19,7 +19,7 @@
         <p class="card-text">Breve descrição sobre a Ong</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+       <small class="text-muted"><a href='#' class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
     <div class="card">
@@ -29,7 +29,7 @@
         <p class="card-text">Breve descrição sobre a Ong</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted"><a href="#" class="btn btn-danger">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
+        <small class="text-muted"><a href="#" class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
   </div>
@@ -45,7 +45,7 @@
         <p class="card-text"> Breve descrição sobre a Ong</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+        <small class="text-muted"><a href='#' class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
     <div class="card">
@@ -55,7 +55,7 @@
         <p class="card-text">Breve descrição sobre a Ong</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+        <small class="text-muted"><a href='#' class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
     <div class="card">
@@ -65,7 +65,7 @@
         <p class="card-text">Breve descrição sobre a Ong</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted"><a href="#" class="btn btn-danger">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
+        <small class="text-muted"><a href="#" class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
   </div>
@@ -81,7 +81,7 @@
         <p class="card-text"> Breve descrição sobre a Ong</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+        <small class="text-muted"><a href='#' class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
     <div class="card">
@@ -91,7 +91,7 @@
         <p class="card-text">Breve descrição sobre a Ong</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</small>
+        <small class="text-muted"><a href='#' class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
     <div class="card">
@@ -101,7 +101,7 @@
         <p class="card-text">Breve descrição sobre a Ong</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted"><a href="#" class="btn btn-danger">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
+        <small class="text-muted"><a href="#" class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
   </div>
