--- a/views/paginaInicial.handlebars
+++ b/views/paginaInicial.handlebars
@@ -47,7 +47,7 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">            
             <h6 class="text-uppercase font-weight-bold">Objetivo da Ong</h6>
               <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                <p>O objetivo do site é arecadar doações para Ongs da cidade de Erechim</p>
+                <p>O objetivo do site é arrecadar doações para Ongs da cidade de Erechim</p>
           </div>   
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">              
               <h6 class="text-uppercase font-weight-bold">Selecionar produto para Doação</h6>
