Update Storyboard.PNG, leonir.css, and cadastro.handlebars

--- a/public/css/leonir.css
+++ b/public/css/leonir.css
@@ -13,3 +13,11 @@ body nav div div a {
     left: 20%;
     position: absolute;
 }
+
+#botaoCadastrar {
+    margin-left: 0%;
+}
+
+#imagemOng {
+    font-size: 25px;
+}
