--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,13 @@
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
 <div class="container" >
-<h1>Cadastrar Usúario</h1>
-<form action="/cadUsuario" method="POST" >
+<h1 id="tituloLogin">Login</h1>
+<br>
+<form action="/login" method="POST" id="login" >
     <input type="text" name="nome" placeholder="informe o nome"/><br><br>
     <input type="password" name="senha" placeholder="informe a senha"/>
     <br><br>
@@ -12,7 +16,7 @@
 </div>
 <br>
 <br>
-<table class="table">
+<!--<table class="table">
     <tr>
         <th>Nome</th>
         <th>Senha</th>
@@ -28,3 +32,4 @@
         </tr>
     {{/each}}
 </table>
+-->
