--- a/views/atualizaOng.handlebars
+++ b/views/atualizaOng.handlebars
@@ -1,6 +1,6 @@
-<h1>Atualização de Usuário</h1>
+<h1>Atualização de Ong</h1>
 {{#each doador}}
-    <form action="/updateUsuario" method="POST">
+    <form action="/updateOng" method="POST">
             <input type="text" name="codigo" readonly="true" value={{id}}>
             <input type="text" name="nome" value={{nome}}>
             <input type="text" name="senha" value={{senha}}>
