--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,36 @@
-<br>
+<h1>Faça Login</h1>
+<form method="POST" action="/login">
+    Usuário:<input type="text" name="nome"><br>
+    Senha:<input type="password" name="senha"><br>
+    <input type="submit">
+</form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<br>
 <br>
 <br>
 <br>
@@ -14,10 +46,12 @@
     <button type="button" class="btn btn-dark">Enviar</button> 
     <button type="button" class="btn btn-dark">Cadastrar</button>
 </form>
-</div>
+</div>-->
+
+
 <br>
 <br>
-<!--<table class="table">
+<table class="table">
     <tr>
         <th>Nome</th>
         <th>Senha</th>
@@ -33,4 +67,4 @@
         </tr>
     {{/each}}
 </table>
--->
+
