--- a/views/cadastroDoacao.handlebars
+++ b/views/cadastroDoacao.handlebars
@@ -2,14 +2,14 @@
 <br>
 <br>
 <div class="container" id="cadastrarDoacao">
-<h1> Cadastrar Doação</h1>
+<h1>Cadastrar um pedido de Doação</h1>
 </div>
 
-<form class="container" action="cadastroDoacao" method="POST">
+<form class="container" action="cadDoacao" method="POST">
   
     <div class="form-group">
     <label for="exampleFormControlSelect1">Categoria Doação</label>
-    <select class="form-control" id="exampleFormControlSelect1">
+    <select class="form-control" name="categoria" id="exampleFormControlSelect1">
       
       <option selected></option>
       <option>Alimentos</option>
@@ -21,7 +21,7 @@
 
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Descrição da Doação</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+    <textarea class="form-control" name="descricao" id="exampleFormControlTextarea1"  rows="8"></textarea>
   </div>
 
 <br>
@@ -29,17 +29,17 @@
 <h1 id="tamanhoDaFonte">Nivel de Prioridade</h1>
 
   <div class="form-check form-check-inline container">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="baixo">
+    <input class="form-check-input" type="radio" name="nivel" id="inlineRadio1" value="baixo">
     <label class="form-check-label" for="inlineRadio1">Baixo</label>
   </div>
 
   <div class="form-check form-check-inline container">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="medio">
+    <input class="form-check-input" type="radio" name="nivel" id="inlineRadio2" value="medio">
     <label class="form-check-label" for="inlineRadio2">Médio</label>
   </div>
 
   <div class="form-check form-check-inline container">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="alto">
+    <input class="form-check-input" type="radio" name="nivel" id="inlineRadio2" value="alto">
     <label class="form-check-label" for="inlineRadio2">Alto</label>
   </div>
 
@@ -50,7 +50,31 @@
   
 </form>
 
-  
+<br>
+<br>
+
+
+
+
+
+<table class="table">
+    <tr>
+        <th>Categoria</th>
+        <th>Descrição</th>
+        <th>Nivel de Prioridade</th>
+        
+    </tr>
+    {{#each doacao}}
+        <tr>
+            <td>{{categoria}}</td>
+            <td>{{descricao}}</td>
+            <td>{{nivel}}</td>
+            <td><a href="/update/{{id}}">Modificar</a></td>  
+            <td><a href="/delete/{{id}}">Apagar</a></td>
+        </tr>
+    {{/each}}
+</table>
+
 
 
 
