--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,6 +35,7 @@
       <a class="nav-item nav-link active" href="/cadastro">Cadastro Doador</a>
       <a class="nav-item nav-link active" href="/cadastroOng">Cadastro Ong</a>
       <a class="nav-item nav-link active" href="/login">Login</a>
+      <a class="nav-item nav-link active" href="/destruir">Fazer Logoff</a>
     </div>
   </div>
 </nav>
