--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,38 +1,4 @@
-<h1>Faça Login</h1>
-<form method="POST" action="/login">
-    Usuário:<input type="text" name="nome"><br>
-    Senha:<input type="password" name="senha"><br>
-    <input type="submit">
-</form>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--<br>
-<br>
-<br>
 <br>
 <br>
 <br>
@@ -43,11 +9,10 @@
     <input type="text" name="nome" placeholder="Nome / Razão Social "/><br><br>
     <input type="password" name="senha" placeholder="Senha"/>
     <br><br>
-    <button type="button" class="btn btn-dark">Enviar</button> 
-    <button type="button" class="btn btn-dark">Cadastrar</button>
+    <input type="submit" value='Login' class="btn btn-dark">
+    <a href="cadastro" class="btn btn-dark">Cadastrar</a>
 </form>
 </div>-->
-
 
 <br>
 <br>
