--- a/public/css/leonir.css
+++ b/public/css/leonir.css
@@ -34,8 +34,10 @@ body nav div div a {
 
 #tamanhoDaFonte{
     font-size: 25px;
+    text-align: center;
 }
 
 #atualizarUsuario {
     text-align: center;
 }
+
