--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
     <input type="submit" value='Login' class="btn btn-dark">
     <a href="cadastro" class="btn btn-dark">Cadastrar</a>
 </form>
-</div>-->
+</div>
 
 <br>
 <br>
