--- a/views/cadastroOng.handlebars
+++ b/views/cadastroOng.handlebars
@@ -1,11 +1,10 @@
-<br>
-<br>
+<br><br>
 <form class="container" action="/cadOng" method="POST">
   
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="inputPassword4">Razão Social</label>
-      <input type="text" class="form-control" id="inputUsario" name="nome" placeholder="Razão Social">
+      <label for="inputPassword4">Nome / Razão Social</label>
+      <input type="text" class="form-control" id="inputUsario" name="nome" placeholder="Nome / Razão Social">
     </div>
     <div class="form-group col-md-6">
       <label for="inputEmail4">E-mail</label>
@@ -19,8 +18,8 @@
       <input type="password" class="form-control" id="inputPassword4" name="senha" placeholder="Senha">
     </div>
     <div class="form-group col-md-6">
-      <label for="inputPassword4">CNPJ</label>
-      <input type="text" class="form-control" id="inputCpf" name="cpf" placeholder=" Digite seu CNPJ">
+      <label for="inputPassword4">CPF / CNPJ</label>
+      <input type="text" class="form-control" id="inputCpf" name="cpf" placeholder=" Digite seu CPF / CNPJ">
     </div>
   </div>
   
