--- a/views/paginaInicial.handlebars
+++ b/views/paginaInicial.handlebars
@@ -1,4 +1,3 @@
-
 <div style="background-color:#e9ecef;">
   <div class="jumbotron jumbotron-fluid">
 
@@ -50,7 +49,7 @@
                 <p>O objetivo do site é arrecadar doações para Ongs da cidade de Erechim</p>
           </div>   
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">              
-              <h6 class="text-uppercase font-weight-bold">Selecionar produto para Doação</h6>
+              <h6 class="text-uppercase font-weight-bold">Selecionar doação desejada</h6>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                   <p>
                     <a href="#!">Alimentos</a>
