--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,8 +32,8 @@
     <div class="navbar-nav container">
       <a class="nav-item nav-link active" href="/">Inicio <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link active" href="/doeAgora">Doe Agora</a>
-      <a class="nav-item nav-link active" href="/cadastro">Cadastro Doador</a>
-      <a class="nav-item nav-link active" href="/cadastroOng">Cadastro Ong</a>
+      <a class="nav-item nav-link active" href="/cadastroDoacao">Cadastro Doação</a>
+      <a class="nav-item nav-link active" href="/cadastroGeral">Cadastre-se</a>
       <a class="nav-item nav-link active" href="/login">Login</a>
       <a class="nav-item nav-link active" href="/destruir">Fazer Logoff</a>
     </div>
