--- a/views/doeAgora.handlebars
+++ b/views/doeAgora.handlebars
@@ -1,6 +1,7 @@
+<div style="background-color:#e9ecef;" >
 <br>
 <br>
-<div class=" container">
+<div  style="background-color:#e9ecef;" class=" container">
   <div class="card-deck">
     <div class="card">
       <img src="..." class="card-img-top" alt="...">
@@ -28,7 +29,7 @@
         <h5 class="card-title">Ong 3</h5>
         <p class="card-text">Breve descrição sobre a Ong</p>
       </div>
-      <div class="card-footer">
+      <div style="background-color:#e9ecef;" class="card-footer">
         <small class="text-muted"><a href="#" class="btn btn-dark">Doação que a Ong precisa (roupa, dinheiro, comida, brinquedos)</a></small>
       </div>
     </div>
@@ -36,7 +37,7 @@
 </div>
 <br>
 <br>
-<div class=" container">
+<div style="background-color:#e9ecef;" class=" container">
   <div class="card-deck">
     <div class="card">
       <img src="..." class="card-img-top" alt="...">
@@ -72,7 +73,7 @@
 </div>
 <br>
 <br>
-<div class=" container">
+<div style="background-color:#e9ecef;" class=" container">
   <div class="card-deck">
     <div class="card">
       <img src="..." class="card-img-top" alt="...">
@@ -105,4 +106,6 @@
       </div>
     </div>
   </div>
+  <br><br><br><br>
+</div>
 </div>
