--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
-
+<div style="background-color:#e9ecef;">
 <br>
 <br>
 <br>
-<div class="container" id="tituloLogin" >
+<div class="container" id="tituloLogin" style="background-color:#e9ecef;" >
 <h1>Login</h1>
 <br>
 <form action="/login" method="POST" id="login" >
@@ -10,10 +10,8 @@
     <input type="password" name="senha" placeholder="Senha"/>
     <br><br>
     <input type="submit" value='Login' class="btn btn-dark">
-    <a href="cadastroOng" class="btn btn-dark">Cadastrar</a>
+    <a href="cadastroGeral" class="btn btn-dark">Cadastrar</a>
 </form>
 </div>
-
-<br>
-<br>
-
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
