--- a/views/atualizaUsuario.handlebars
+++ b/views/atualizaUsuario.handlebars
@@ -1,5 +1,5 @@
 <h1 id="atualizarUsuario">Atualização de Usuário</h1>
-{{#each doador}}
+{{#each ong}}
 
 <form action="/updateUsuario" method="POST" class="container">
     <div class="form-row">
