--- a/views/cadastroGeral.handlebars
+++ b/views/cadastroGeral.handlebars
@@ -1,4 +1,4 @@
-<form class="form-group col-md-12" id="tamanhoDaFonte" action="" method="POST" style="background-color:#e9ecef;">
+<form class="form-group col-md-12" id="cssCadastro" action="" method="POST" style="background-color:#e9ecef;">
 
 <br><br><br><br>
 
@@ -11,5 +11,5 @@
   <div>
    <a href="/cadastroAdministrador" class="btn btn-dark">Administrador</a>
   </div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </form>
