--- a/views/doeAgora.handlebars
+++ b/views/doeAgora.handlebars
@@ -1,10 +1,11 @@
+
 <div style="background-color:#e9ecef;" >
 <br>
 <br>
 <div  style="background-color:#e9ecef;" class=" container">
   <div class="card-deck">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/static/imagens/copal.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ong 1</h5>
         <p class="card-text"> Breve descrição sobre a Ong</p>
@@ -14,7 +15,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/static/imagens/ACHA.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ong 2</h5>
         <p class="card-text">Breve descrição sobre a Ong</p>
@@ -24,7 +25,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/static/imagens/ACHA.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ong 3</h5>
         <p class="card-text">Breve descrição sobre a Ong</p>
@@ -96,7 +97,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/public/imagens/ACHA.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ong 3</h5>
         <p class="card-text">Breve descrição sobre a Ong</p>
